--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-flag-icon-css": "^1.0.25",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "svg-country-flags": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
